--- a/Index.css
+++ b/Index.css
@@ -55,3 +55,15 @@ h1 {
 
     color:white
 }
+
+.mainNumber {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    margin-top: 3%;
+    margin-bottom: 3%;
+
+    color: white;
+    font-size: 340%;
+}
