--- a/Index.css
+++ b/Index.css
@@ -7,7 +7,7 @@ body {
     margin: 0;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-image: linear-gradient( rgb(0, 9, 39) , rgb(255, 255, 255));
+    background-image: linear-gradient( rgb(0, 9, 39) , rgb(110, 110, 110));
 }
 
 .header {
@@ -39,7 +39,7 @@ h1 {
 }
 
 .stopwatch {
-    margin-top: 80px;
+    margin-top: 3%;
 
     display: flex;
     align-items: center;
@@ -66,4 +66,16 @@ h1 {
 
     color: white;
     font-size: 340%;
+}
+
+.record {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    margin-top: 3%;
+    margin-bottom: 3%;
+
+    color: white;
+    font-size: 140%;
 }
